Spacing correction

--- a/src/sass/settings/_section-spacing.scss
+++ b/src/sass/settings/_section-spacing.scss
@@ -1,7 +1,7 @@
 .section {
     &--spaced {
-        padding-top: 4rem;
-        padding-bottom: 4rem;
+        padding-top: 6rem;
+        padding-bottom: 6rem;
         // padding-bottom: 12rem;
 
         @media screen and (max-width: 768px) {
